--- a/style.css
+++ b/style.css
@@ -1,27 +1,27 @@
-
 * {
     box-sizing: border-box;
 }
 
 body {
     font-family: 'Quattrocento Sans', sans-serif;
+    color: #a4aead;
 }
-/* .header {
+.full-container {
     background-color: #1d2126;
-    width: 1900px;
-    height: 85px;
-} */
+    width: 100%;
+}
 
 .container {
     /* width: 100%;
     height: 85px; */
     padding-left: 15px;
     padding-right: 15px;
+    /* padding-top: 25px;
+    padding-bottom: 25px; */
     margin-left: auto;
     margin-right: auto;
-    line-height: 85px;
     color: white;
-    background-color: black;
+    /* background-color: #1d2126; */
 }
 
 .row {
@@ -35,21 +35,14 @@ body {
     padding-right: 15px;
 }
 
-.col-xs-12{
-    flex: 0 0 100%;
-    max-width: 100%;
-}
-
-
-.col-xs-12 {
-    flex: 0 0 100%;
-    max-width: 100%;
-}
-
 
 @media (min-width:768px) {
     .container {
         max-width: 720px;
+    }
+    .col-sm-1 {
+        flex: 0 0 8.33331%;
+        max-width: 8.33331%;
     }
     .col-sm-2 {
     flex: 0 0 16.66667%;
@@ -59,10 +52,35 @@ body {
     flex: 0 0 24.99999%;
     min-width: 24.99999%;
     }
+    .col-sm-4 {
+        flex: 0 0 33.33324%;
+        min-width: 33.33324%;
+    }
+    .col-sm-5 {
+        flex: 0 0 41.66655%;
+        min-width: 41.6666%;
+    }
+    .col-sm-6 {
+    flex: 0 0 49.99986%;
+    max-width: 49.999861%;
+    justify-content: space-between;
+    }
     .col-sm-7 {
-    flex: 0 0 58.33331%;
-    max-width: 58.33331%;
-}
+        flex: 0 0 58.33317%;
+        min-width: 58.33317%;
+    }
+    .col-sm-8 {
+        flex: 0 0 66.66648%;
+        min-width: 66.6664%;
+    }
+    .col-sm-9 {
+        flex: 0 0 74.99979%;
+        min-width: 74.99979%;
+    }
+    .col-sm-12 {
+        flex: 0 0 100%;
+        min-width: 100%;
+    }
 }
 
 @media (min-width: 992px) {
@@ -76,17 +94,3 @@ body {
         max-width: 1170px;
     }
 }
-
-@media (max-width:767px) {
-    .container {
-        max-width: 100%;
-    }
-    .col-xs-hidden {
-        display: none;
-    }
-    .hidden-row {
-        flex-wrap: wrap;
-    }
-}
-
-
