--- a/styleSM.css
+++ b/styleSM.css
@@ -53,20 +53,24 @@
         font-size: 14px;
         line-height: 30px;
     }
-    .menu > a:hover {
+    .menu > a:focus {
         border: 1px solid #a4aead;
         border-radius: 4px;
+        background-color: #39a493;
+    }
+    .menu > a:active {
+        background-color: #39a493;
+        color: white;
     }
 
     .search {
-        padding-left: 0;
+        padding-left: 10px;
         padding-right: 0;
         color: #a4aead;
         border: 1px solid #a4aead;
         border-radius: 8px;
         line-height: 30px;
         text-transform: uppercase;
-        padding-left: 10px;
         font-size: 14px;
         position: relative;
     }
@@ -76,6 +80,14 @@
         position: absolute;
         right: 0;
         top: -9px;
+    }
+    .search-input-text{
+        background: transparent;
+        border: none;
+        width: 100%;
+    }
+    .search-input-text:focus {
+        border: none;
     }
 
 
@@ -94,6 +106,36 @@
     .row-slider {
         display: inline-flex;
         flex-wrap: wrap;
+        padding-top: 225px;
     }
+
+    .row-slider > .h1 {
+        text-transform: uppercase;
+        font-size: 36px;
+        font-weight: 400;
+    }
+
+    .row-slider >.text {
+        margin-top: 30px;
+        margin-bottom: 40px;
+    }
+
+    .row-slider > .buttons > .button {
+        text-transform: uppercase;
+        width: 120px;
+        height: 40px;
+        border: 2px solid #a4aead; 
+        border-radius: 4px;
+        color: #a4aead;   
+        margin-right: 10px;
+        background: transparent;   
+    }
+
+    .row-slider > .buttons > .button:focus {
+        background-color: #39a493;
+        color: white;
+        border: none;
+    }
+
 }
 
