--- a/styleLG.css
+++ b/styleLG.css
@@ -34,6 +34,7 @@
     .menu-a {
         padding-left: 7px;
         padding-right: 7px;
+        text-transform: uppercase;
     }
     .menu > a{
         text-decoration: none;
@@ -142,7 +143,7 @@
         flex-wrap: wrap;
     }
 
-    .modest-block, .meet-block {
+    .modest-block, .meet-block, .lovely-block {
         height: 35px;
         line-height: 35px;
         border-left: 10px solid #c8cdd0;
@@ -150,7 +151,7 @@
         margin-bottom: 60px;
     }
 
-    .modest-h1, .meet-h1{
+    .modest-h1, .meet-h1, .lovely-h1{
         font-size: 35px;
         font-weight: 700;
         text-transform: uppercase;
@@ -216,7 +217,7 @@
     }
 
     .box01, .box02, .box03 {
-        width: 50px;
+        /* width: 50px; */
         height: 50px;
         background-color: #23b7a4;
         text-align: center;
@@ -241,6 +242,7 @@
     .row-meet {
         display: inline-flex;
         flex-wrap: wrap;
+        padding-bottom: 105px;
     }
 
     .meet-block {
@@ -260,6 +262,115 @@
     .name > h3 {
         text-transform: uppercase;
         color: black;
+    }
+
+
+
+
+
+    .lovely-work {
+        height: 900px;
+        background-color: #3a454d;
+        padding-top: 80px;
+        padding-bottom: 60px;
+    }
+    .row-lovely {
+        display: inline-flex;
+        flex-wrap: wrap;
+    }
+
+    .lovely-block {
+        border-left: 10px solid #4e5a62;
+    }
+
+    .lovely-h1 {
+        color: white;
+        font-weight: 400;
+    }
+
+
+
+
+    .flex {
+        display: inline-flex;
+        flex-wrap: wrap;
+    }
+    .travel-foto {
+        position: relative;
+    }
+
+    .travel-foto:hover .travel-foto-opacity, .gray-botton{
+        display: block;
+    }
+      
+
+    .travel-foto-opacity {
+        display: none;
+        position: absolute;
+        
+    }
+
+    .pluss {
+        position: absolute;
+        background-color: #4e5a62;
+        width: 360px;
+        height: 205px;
+        opacity: 0.6;
+        top: -267px;
+
+    }
+    .pluss::before {
+        content: url(img/plus.png);
+        display: block;
+        position: absolute;
+        width: 20px;
+        height: 20px;
+        color: white;
+        z-index: 20;
+        top: 90px;
+        right: 170px;
+    }
+
+    .gray {
+        display: ;
+        position: absolute;
+        width: 360px;
+        height: 62px;
+        background-color: #292f36;
+        bottom: 0;
+        text-align: center;
+        font-size: 20px;
+        padding-top: 20px;
+        opacity: 1;
+    }
+
+    
+
+
+
+
+
+
+    .line {
+        margin-bottom: 30px;
+    }
+
+    .lovely-button-show {
+        text-align: center;
+    }
+
+    .show-me-more {
+        margin: 80px 0;
+        width: 148px;
+        height: 40px;
+        border: 1px solid white;
+        border-radius: 8px;
+        background: transparent;
+        color: white;
+    }
+
+    .show-me-more:active {
+        background-color: rgba(250, 249, 249, 0.2);
     }
 
     
